# investment-bot

./: .env.bak.1775831597  .gitignore  README.md  pyproject.toml  requirements.txt  test_fix.py
.github/: pull_request_template.md
config/: app.example.yml  app.yml  dev.yml  prd.yml
docs/: FINAL-HANDOFF.md  agile-roadmap.md  architecture.md  auto-trade-optimization-complete.md  auto-trade-performance-analysis-2026-04-12.md  auto-trade-refactoring-plan.md  backlog.md  dashboard-policy-state-separation.md  mvp-scope.md  product-requirements.md  ralph-loop-dev-prd.md  symbol-validation-2026-04-11.md  trading-investigation-map.md  trading-policy-centralization.md  trend-following-near-miss-observability-design.md  trend-following-threshold-design.md  vision.md
ops/: FLOW.md  latest_monitor.json  latest_report.md  latest_tune.json  monitor_history.jsonl  tune_history.jsonl  weekly_report.md
scripts/: executor.py
tests/: test_account_service.py  test_alert_service.py  test_api.py  test_auto_trade_performance.py  test_auto_trade_service.py  test_backtest.py  test_candle_store.py  test_config.py  test_config_service.py  test_dashboard_summary.py  test_drift_report_service.py  test_dynamic_symbol_selector.py  test_exchange_rules_service.py  test_execution_costs.py  test_fail_safe_service.py  test_ledger_store.py  test_live_api.py  test_live_execution_service.py  test_live_market_data.py  test_live_submit_api.py  test_market_data.py  test_mode_controls.py  test_near_miss_persistence.py  test_paper_broker.py  test_position_sizing.py  test_ralph_harness.py  test_risk.py  (+15 more)
(+86 files in other folders)
